@@ -77,6 +77,7 @@
     <Compile Include="GUI\UIPreviewRenderer.cs" />
     <Compile Include="GUI\Thumbnails.cs" />
     <Compile Include="Interfaces.cs" />
+    <Compile Include="LevelUpExtension.cs" />
     <Compile Include="Utils\ModUtils.cs" />
     <Compile Include="Notifications\ConflictNotification.cs" />
     <Compile Include="Notifications\ErrorNotification.cs" />
