@@ -1,5 +1,7 @@
 ﻿- Add 'Instant Plopping' option for growables
 - Add 'Disable Zone Check' option for growables
+- Add 'Ignore low land value complaint' option
+- Add 'Ignore too few services complaint' option
 - Building icons in ploppable panel now sorted by display name
 - Fix building selection not updating when info panel button pressed
 
